plugins {
    id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
    id 'maven-publish'
    id 'com.diffplug.spotless' version '8.8.0'
}

version = project.mod_version
group = project.maven_group
def expandedModVersion = project.version

base {
    archivesName = project.archives_base_name
}

repositories {
    mavenCentral()
    maven { url = 'https://maven.fabricmc.net/' }
    maven {
        name = 'TerraformersMC'
        url = 'https://maven.terraformersmc.com/'
    }
}

loom {
    splitEnvironmentSourceSets()
    runs {
        client {
            runDir = 'run-1.20.1'
        }
    }
    mods {
        threadium {
            sourceSet sourceSets.main
            sourceSet sourceSets.client
        }
    }
}

// The 1.20.1 port starts from the validated legacy-renderer source tree. The directory name is
// retained temporarily so the API adaptation can be validated without a noisy whole-tree move.
sourceSets {
    main {
        java.setSrcDirs(['src/backport1211/main/java'])
        resources.setSrcDirs(['src/backport1211/main/resources'])
    }
    client {
        java.setSrcDirs(['src/backport1211/client/java'])
        resources.setSrcDirs(['src/backport1211/client/resources'])
    }
    test {
        java.setSrcDirs(['src/backport1211/test/java'])
        resources.setSrcDirs(['src/backport1211/test/resources'])
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
    testImplementation platform('org.junit:junit-bom:5.13.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('ensureBackportMainOutputs') {
    doLast {
        layout.buildDirectory.dir('classes/java/main').get().asFile.mkdirs()
        layout.buildDirectory.dir('resources/main').get().asFile.mkdirs()
    }
}

tasks.named('runClient') {
    dependsOn tasks.named('ensureBackportMainOutputs')
}

spotless {
    java {
        target 'src/backport1211/**/*.java'
        palantirJavaFormat('2.96.0').style('PALANTIR').formatJavadoc(true)
        trimTrailingWhitespace()
        endWithNewline()
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    withSourcesJar()
}

tasks.withType(Jar).configureEach {
    from('LICENSE') {
        rename { "${it}_${project.archives_base_name}" }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.release = 17
    options.encoding = 'UTF-8'
}

tasks.withType(ProcessResources).configureEach {
    inputs.property 'version', expandedModVersion
    filesMatching('fabric.mod.json') {
        expand 'version': expandedModVersion
    }
}
